<resources>
    <string name="app_name">АкциоН</string>
    <integer name="com_vk_sdk_AppId">5620732</integer>
    <string name="facebook_app_id">123248598163822</string>

    <string name="preview">Preview</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Profile</item>
        <item >Feed</item>
        <item >Chats</item>
        <item >Map</item>
        <item >Settings</item>
        <item >Logout</item>

    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <!--<item>@drawable/ic_home</item>-->
        <!--<item>@drawable/ic_people</item>-->
        <!--<item>@drawable/ic_photos</item>-->
        <!--<item>@drawable/ic_communities</item>-->
        <!--<item>@drawable/ic_pages</item>-->
        <!--<item>@drawable/ic_whats_hot</item>-->
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="feed_activity_title">Лента</string>
    <string name="vk_activity_title">Vk Share</string>
    <string name="fb_activity_title">Fb Share</string>
    <string name="qr_activity_title">Qr Scan</string>
    <string name="single_chat_title">Single Chat</string>
    <string name="title_activity_maps">Карта</string>
    <string name="title_activity_own">My Events</string>
    <string name="title_activity_sub">Избранное</string>
    <string name="app_title">АкциоН</string>
    <string name="field_email">Почта:</string>
    <string name="field_password1">Пароль:</string>
    <string name="field_password2">Повторите пароль:</string>
    <string name="field_first_name">First name:</string>
    <string name="field_last_name">Last name:</string>
    <string name="description_confirm">Enter verification code here (check your email)</string>
    <string name="ok">OK</string>
    <string name="email_hint">Введите почту</string>
    <string name="password_hint">Введите пароль</string>
    <string name="sign_in_btn">Войти</string>
    <string name="sign_in_title">Вход</string>
    <string name="hint_password_repeat">Повторите пароль</string>
    <string name="sign_up_title">Регистрация</string>

    <!--GCM-->
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token…</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Регистрация</string>
    <string name="qr_code_image">qr_code_image</string>
    <string name="event_pic">event_visual</string>
    <string name="favorite_icon">favorite</string>
    <string name="three_dots">..</string>
    <string name="price_icon">price_icon</string>
    <string name="title">Название</string>
    <string name="event_description">Описание:</string>
    <string name="arrow_icon">arrow_icon</string>
    <string name="creator_event_field">Создатель:</string>
    <string name="creator">Создатель</string>
    <string name="site_event_field">Сайт:</string>
    <string name="rating_description">Оцените акцию</string>
    <string name="rank">Оценить</string>
    <string name="no_internet">Отсутствует интернет соединение</string>
    <string name="rate_activity_title">Оценки</string>
    <string name="enter_as_guest">Войти как гость</string>
    <string name="no_items">Список пуст</string>
    <string name="action_settings">Настройки</string>
    <string name="button_register"> Регистрация</string>
    <string name="date">date</string>
    <string name="description">Описание</string>
    <string name="organization_instruction">Покажите этот код организации</string>
    <string name="feed_menu_item">Лента</string>
    <string name="map_menu_item">Карта</string>
    <string name="recommended_menu_item">Рекомендуемое</string>
    <string name="rank_menu_item">Оценки</string>
    <string name="logout_menu_item">Выход</string>
    <string name="login_menu_item">Войти</string>
    <string name="warning_alert_title">Внимание!</string>
    <string name="logout_alert_message">Вы уверены, что хотите выйти?</string>
    <string name="logout_alert_btn">Выйти</string>
    <string name="cancel_alert_btn">Отмена</string>
    <string name="fav_menu_item">Избранное</string>
    <string name="single_event_title">Акция</string>
    <string name="route_to_discount">Проложить путь</string>
    <string name="show_qr_code">Показать Qr-код</string>
    <string name="call_organization_btn">Позвонить</string>
    <string name="share_with_friends">Поделиться</string>
    <string name="address_single_event">Адрес</string>
    <string name="metro_station">Станция метро</string>
    <string name="website_btn">Перейти на сайт</string>
    <string name="event_description_title">Описание</string>
    <string name="qr_code_title">Qr код</string>
    <string name="rank_title">Оценка</string>
    <string name="recommended_title">Рекомендуемое</string>
    <string name="thank_you_toast">Спасибо!</string>
    <string name="guest">Войти как гость</string>
    <string name="guest_menu">Гость</string>
    <string name="fogot">Забыл пароль</string>
    <string name="pls_log">Пожалуйста войдите в аккаунт</string>
    <string name="restore">Восстановление пароля</string>
    <string name="restore_btn">Восстановить</string>

    <string name="login_wrong_email_format">Неверный формат почты</string>
    <string name="login_empty_pass_message">Введите пароль</string>
    <string name="login_wrong_pass_format">Пароль должен содержать цифры и буквы, минимум 8 символов</string>
    <string name="reg_second_pass_message">Пароли должны совпадать</string>
    <string name="reg_empty_second_pass_message">Подтвердите пароль</string>
    <string name="no_internet_connection">Отсутствует интернет соединение или соединение нестабильное</string>
    <string name="try_again">Попробуйте снова</string>
    <string name="kilometers">км</string>
    <string name="login_failed">Ошибка входа</string>
    <string name="registration_failed">Ошибка регистрации</string>
    <string name="restore_failed">Ошибка восстановления</string>
    <string name="forgot_ok">Ссылка выслана на email</string>
    <string name="check_email_title">Проверьте почту</string>
    <string name="check_email_message">Пожалуйста, проверьте свою почту, чтобы подтвердить регистрацию</string>
    <string name="email_already_exists">Пользователь с такой почтой уже существует</string>
    <string name="gps_network_not_enabled">Пожалуйста включите отпределение местоположения</string>
    <string name="open_location_settings">Открыть</string>
    <string name="cancel">Отмена</string>
    <string name="user_not_exist">Пользователя с такой почтой не существует</string>
    <string name="login_empty_message">Введите почту</string>
    <string name="restore_mail">Ссылка для восстановления отправлена на почту</string>
</resources>