<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".auth.ActivityAuth">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:id="@+id/scroll"
        android:orientation="vertical"
        android:paddingBottom="0dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="0dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="82dp"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/app_title"
                    android:src="@drawable/logo_m" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/logo"
                    android:maxLines="2"
                    android:gravity="center"
                    android:text="@string/restore"
                    android:textColor="#000"
                    android:textSize="25sp" />

            </RelativeLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:theme="@style/BlackEditTextTheme" />


                    <Button
                        android:id="@+id/btn_send"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="@color/vk_share_gray_line"
                        android:text="@string/restore_btn"
                        android:textColor="#000" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/login_errors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#ff0000"
                        android:textSize="15sp" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>